# soma

./: Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: Rust Diffusion LoRA Architecture Blueprint.md  backend_architecture_mapping.md  phases.md  sequence.puml
scripts/: export_yolo.py
src/: main.rs
src/train/: convergence_test.rs  mod.rs
src/train/loss/: flow_matching.rs  mod.rs
src/train/segment/: mod.rs
