[package]
name = "soma"
version = "0.1.0"
edition = "2021"

[dependencies]
burn = { version = "0.20", features = ["train", "wgpu", "autodiff", "ndarray"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
burn = { version = "0.20", features = ["train", "wgpu", "autodiff", "ndarray"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
